--- a/ActivityTest/app/src/main/AndroidManifest.xml
+++ b/ActivityTest/app/src/main/AndroidManifest.xml
@@ -8,10 +8,26 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FirstActivity" android:label="This is my FirstActivity">
+        <activity
+            android:name=".FirstActivity"
+            android:label="This is my FirstActivity">
             <intent-filter>
-                <action android:name = "android.intent.action.MAIN"/>
-                <category android:name = "android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".SecondActivity">
+            <intent-filter>
+                <action android:name="me.ipcreator.activitytest.ACTION_START" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.MY_CATEGORY" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".ThirdActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:scheme="https" />
             </intent-filter>
         </activity>
     </application>
