--- a/ActivityTest/app/src/main/AndroidManifest.xml
+++ b/ActivityTest/app/src/main/AndroidManifest.xml
@@ -8,22 +8,29 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".FirstActivity"
+            android:launchMode="singleTask"
             android:label="This is my FirstActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SecondActivity">
+
+        <activity android:name=".SecondActivity"
+            android:launchMode="singleInstance"
+            android:label="This is my SecondActivity">
             <intent-filter>
                 <action android:name="me.ipcreator.activitytest.ACTION_START" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.MY_CATEGORY" />
             </intent-filter>
         </activity>
-        <activity android:name=".ThirdActivity">
+
+        <activity android:name=".ThirdActivity"
+            android:label="This is my ThirdActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
