--- a/RecyclerViewTest/app/src/main/AndroidManifest.xml
+++ b/RecyclerViewTest/app/src/main/AndroidManifest.xml
@@ -4,18 +4,20 @@
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@drawable/icon"
         android:label="Roll and Pick"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PicViewActivity"></activity>
+        <activity android:name=".PicViewActivity" />
+        <activity android:name=".AnimationActivity"/>
     </application>
 
 </manifest>
